--- a/index.html
+++ b/index.html
@@ -13,7 +13,12 @@
 <p>2021/03/02 Duck-Mouth-Monster, Day 407</p>
 <p>2021/03/16 Ama no cha, Day 394</p>
 <p>2021/04/11 Rspikachualpha, Day 368</p>
-<p>2021/05/16 Yukun_andy, Day 329 \n \nThis website is made by Kingking at 14 Apr 2022. \n Last updated 15:55 14 Apr 2022</p>
+<p>2021/05/16 Yukun_andy, Day 329</p>
+<p></p>
+<p></p>
+<p>This website is made by Kingking at 14 Apr 2022.</p>
+<p></p>
+<p>Last updated 15:55 14 Apr 2022</p>
 
 </body>
 </html>
