--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
 
 <h3>This page records the date since Snowolf has met with his friends.</h3>
 
+<p>2015/09/01 Chun Seen Mei, Day 2417</p>
 <p>2016/09/01 Kingking, Day 2051</p>
 <p>2016/09/01 Moonlight, Day 2051</p>
 <p>2017/09/01 Mighty Memer, Day 1686</p>
+<p>2018/09/01 Nottoday, Day 1321</p>
 <p>2021/03/02 Duck-Mouth-Monster, Day 407</p>
 <p>2021/03/16 Ama no cha, Day 394</p>
 <p>2021/04/11 Rspikachualpha, Day 368</p>
