--- a/index.html
+++ b/index.html
@@ -7,20 +7,22 @@
 
 <h3>This page records the date since Snowolf has met with his friends.</h3>
 
-<p>2015/09/01 Chun Seen Mei, Day 2419</p>
-<p>2016/09/01 Kingking, Day 2053</p>
-<p>2016/09/01 Moonlight, Day 2053</p>
-<p>2017/09/01 Mighty Memer, Day 1688</p>
-<p>2018/09/01 Nottoday, Day 1323</p>
-<p>2021/03/02 Duck-Mouth-Monster, Day 409</p>
-<p>2021/03/16 Ama no cha, Day 396</p>
-<p>2021/04/11 Rspikachualpha, Day 370</p>
-<p>2021/05/16 Yukun_andy, Day 331</p>
+<p>2014/09/01 Chun Seen Mei, Day 2821</p>
+<p>2016/09/01 Kingking, Day 2090</p>
+<p>2016/09/01 Moonlight, Day 2090</p>
+<p>2017/09/01 Diana, Day 1725</p>
+<p>2017/09/01 Isabelle, Day 1725</p>
+<p>2017/09/01 Mighty Memer, Day 1725</p>
+<p>2018/09/03 Nottoday, Day 1358</p>
+<p>2019/09/02 Hayley, Day 994</p>
+<p>2021/03/02 Duck-Mouth-Monster, Day 447</p>
+<p>2021/04/11 Rspikachualpha, Day 407</p>
+<p>2021/08/22 Mitsu, Day 274</p>
 <p></p>
 <p></p>
 <p>This website is made by Kingking at 14 Apr 2022.</p>
 <p></p>
-<p>Last updated 09:22 16 Apr 2022</p>
+<p>Last updated 09:22 23 May 2022</p>
 
 </body>
 </html>
